# bath

./: .gitignore  README.md  experimental_resolution_override.cfg  project.godot  pyproject.toml  rust_bath.gdextension
Resources/CharacterComponents/: default.tres
Resources/Shaders/: all_in_one_ripple.gdshader  buffer_sampling_clamp_test.gdshader  buffer_sampling_clamp_test_main.gdshader  constants.gdshaderinc  finite_approx_ripple.gdshader  fragcoord_inversion_debug.gdshader  fragcoord_invert_propagation_test.gdshader  light_shader.gdshader  simple_feedback_buffer.gdshader  testripple.gdshader  virtual_grid_snapping.gdshader  water.gdshader
Resources/TileMaps/: GlacierMap.tscn  WaterBody.tscn
Resources/TileSets/: glacier_tileset.tres  water.tres
Skeleton (no warping)/: skeleton (no warping).tscn
assets/TileMaps/: GlacierMap.tscn  WaterBody.tscn
assets/custom/: chi_config.txt  field.config  view.config
assets/meshes/: arrow_PREBAKE.glb  fusuma_PREBAKE.glb  kiwaku_PREBAKE.glb  koshidaka_PREBAKE.glb  sphere_PREBAKE.glb  sphere_PREBAKE.gltf
assets/shaders/: README.md
godot/: Main.gd  Main.gd.uid  Main.tscn  Profiler.gd  bake.gd  bake.gd.uid  experimental_resolution_override.cfg  export_presets.cfg  project.godot  rust_bath.gdextension  rust_bath.gdextension.uid
godot/Audio/: AudioBus.gd  (+24 more)
python_bath/: server.py
rust/: .clang-format  Cargo.toml  README.md  build.rs  flake.nix  rustfmt.toml  tsf.h
rust/.cargo/: config.toml
rust/asset_loader/: Cargo.toml
rust/asset_payload/: Cargo.toml
rust/asset_payload/src/: lib.rs
rust/examples/: asdf.rs  audio_test.rs  core_3d_fixed_function_didactic.rs  core_3d_fixed_function_didactic_opengl11.rs  debug.rs  debug_mesh_info.rs  debug_space.rs  dither.rs  drekker_effect.rs  even_worse.rs  feedback_buffer.rs  fft_visualizer.rs  fixed_func_sandbox.rs  font_stuff.rs  fu4seoi3.rs  gen_panchang.rs  ghost.rs  ghost_decomp_proper.rs  ghost_dither.rs  ghost_dither_cpu_shader.rs  ghost_dither_fixed_function.rs  ghost_dither_glsl100.rs  ghost_dither_opengl11.rs  ghost_dither_opengl11_final.rs  ghost_dither_opengl11_geometry.rs  ghost_dither_opengl11_jugemu.rs  ghost_dither_opengl11_jugemu_ndc.rs  ghost_dither_opengl11_main_observer.rs  ghost_dither_opengl11_observation.rs  ghost_dither_opengl11_texture.rs  ghost_dither_ugly.rs  ghost_final.rs  ghost_fixed_function.rs  ghost_vertex.rs  ice_sheets.rs  jugemu_meta.rs  knot_morph.rs  mesh_decimate.rs  mesh_viewer.rs  music_ball.rs  (+18 more)
rust/font_gen/: Cargo.toml  main.rs
rust/resources/: Cargo.toml  buffer_a.glsl  image.glsl
rust/resources/gdshader/: buffer_a.gdshader  image.gdshader
rust/resources/glsl/: buffer_a.glsl  debug_fragment.glsl  debug_vertex.glsl  image.glsl  raylib_debug_fragment.glsl  raylib_debug_vertex.glsl  raylib_default_vert.glsl  raylib_default_vertex.glsl
rust/resources/glsl/color/: drekker_effect.glsl  supersampling.glsl
rust/resources/glsl/ice_sheets/: ice_frag.glsl  ice_frag_2.glsl  ice_sheets.glsl  ice_vert.glsl  ice_vert_2.glsl  ice_vertex.glsl  icesheets_fragment.glsl  icesheets_fragment_drafting.glsl  icesheets_vertex.glsl  icesheets_vertex_drafting.glsl
rust/resources/shaders/gdshader/: buffer_a.gdshader
rust/resources/shaders/glsl/: debug_vertex.glsl
rust/resources/shadertoy/: buffer_a.shadertoy.glsl  drekker.shadertoy.glsl  image.shadertoy
rust/resources/src/: lib.rs
rust/src/: audio_analysis_util.rs  collision_mask_util.rs  keys.rs  lib.rs  main.rs  midi.rs  resource_paths.rs  sf_debug.rs  tsf_bindings.rs
rust/src/audio_analysis/: fftw.rs  godot.rs  mod.rs  util.rs
rust/src/collision_mask/: godot.rs  isp.rs  mod.rs  util.rs
rust/src/fixed_func/: backup.rs  constants.rs  deprecated.rs  dsu.rs  faces.rs  ghost.rs  happo_giri.rs  happo_giri_observer.rs  immediate_mode3d.rs  jugemu.rs  mesh_features_close_to_upstream.rs  mod.rs  papercraft.rs  papercraft_gore.rs  silhouette.rs  silhouette_constants.rs  silhouette_geometry_util.rs  silhouette_interpolation.rs  silhouette_inverse_projection_util.rs  silhouette_util.rs  software_render.rs  texture.rs  topology.rs  topology_geometry_refactor.rs  welding.rs
rust/src/fu4seoi3/: config_and_state.rs  core.rs  draw.rs  hud.rs  mod.rs
rust/src/geometry/: deep.rs  mod.rs  papercraft.rs  unfold_mst.rs  unfold_uv.rs  weld_vertices.rs  welding.rs
rust/src/godot_nodes/: drekker.rs  feedback_buffer.rs  icesheets.rs  mod.rs  water.rs
rust/src/godot_nodes/audio/: audio_pool_manager.rs  fft_texture.rs  fft_visualizer.rs  music_dimension_manager.rs  pitch_dimension.rs  rhythm_dimension.rs  waveform_visualizer.rs
rust/src/midi/: core.rs  debug.rs  godot.rs  keys.rs  midi.rs  midi_lib.rs  mod.rs  pitch.rs  playback.rs  rhythm.rs  sf_debug.rs  test_playback.rs  tests.rs  tsf_bindings.rs  util.rs
rust/src/nodes/: audio_files.rs  audio_pool_manager.rs  collision.rs  drekker.rs  drekker_renderer.rs  feedback_buffer.rs  fft_texture.rs  fft_visualizer.rs  icesheets.rs  midi.rs  mod.rs  music_dimension_manager.rs  pitch_dimension.rs  rust_util.rs  water.rs  waveform_texture.rs  waveform_visualizer.rs
rust/src/nodes/audio/: audio_bus.rs  audio_files.rs  audio_pool_manager.rs  fft_visualizer.rs  mod.rs  music_dimension_manager.rs  pitch_dimension.rs  waveform_visualizer.rs
rust/src/raylib_bath/: mod.rs  util.rs
rust/src/render/: drekker.rs  godot.rs  mod.rs  raylib.rs  raylib_util.rs  renderer.rs
rust/src/sound_render/: audio_bus.rs  godot.rs  godot_util.rs  mod.rs  raylib.rs  sound_renderer.rs  util.rs
(+723 files in other folders)
