[package]
name = "bath"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
asset_payload = { path = "asset_payload", default-features = false }
hound = "3.4.0"
rustysynth = "1.3.5"
# TODO: for single threaded:
# midly = { version = "0.5.3", default-features = false, features = ["std", "alloc"] }
midly = "0.5.3"
godot = { version = "0.3.1", features = ["experimental-wasm"], optional = true }
heapless = {version = "0.8.0", optional = true}
midir = { version = "0.10.1", optional = true }
rdev = { version = "0.5.3", optional = true }
terminal_size = { version = "0.4.2", optional = true }
fftw2-sys = { git = "https://github.com/meisei4/fftw2-rs.git", branch = "main" }

#raylib = { version = "5.5.1", optional = true }
#raylib = { git = "https://github.com/deltaphc/raylib-rs.git", optional = true }
raylib = { git = "https://github.com/meisei4/raylib-rs.git", branch = "unstable", features = [], optional = true}
#raylib = { git = "https://github.com/raylib-rs/raylib-rs.git", branch = "stable", optional = true }

[features]
default = ["std", "godot"]
std = []
tests-only = ["midir", "rdev", "terminal_size", "raylib"]
nasa-embed = ["asset_payload/nasa-embed"]
glsl-100 = ["raylib/opengl_es_20"]

[target.'cfg(not(any(target_arch = "wasm32", target_os = "linux")))'.dependencies]
aubio-rs = "0.2.0"
lewton = "0.10.2"


[build-dependencies]
cc = "=1.0"
