[package]
name = "bath"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
asset_payload = { path = "asset_payload", default-features = false }
hound = "3.4.0"
rustysynth = "1.3.5"
# TODO: for single threaded:
# midly = { version = "0.5.3", default-features = false, features = ["std", "alloc"] }
midly = "0.5.3"
godot = { version = "0.3.1", features = ["experimental-wasm"], optional = true }
heapless = { version = "0.8.0", optional = true }
midir = { version = "0.10.1", optional = true }
rdev = { version = "0.5.3", optional = true }
terminal_size = { version = "0.4.2", optional = true }
fftw2-sys = { git = "https://github.com/meisei4/fftw2-rs.git", branch = "main" }
once_cell = "1.21.3"

#raylib = { git = "https://github.com/meisei4/raylib-rs.git", branch = "meshbuilder_ideas", features = [], optional = true }
#raylib = { git = "https://github.com/raylib-rs/raylib-rs.git", branch = "unstable", features = [], optional = true }
raylib = { path = "/home/adduser/raylib-rs/raylib", features = [], optional = true }
#[patch."https://github.com/raylib-rs/raylib-rs.git"]
#raylib = { path = "/home/adduser/raylib-rs/raylib" }
#raylib-sys = { path = "/home/adduser/raylib-rs/raylib-sys" }

[features]
default = ["std", "godot"]
std = []
tests-only = ["midir", "rdev", "terminal_size", "raylib"]
nasa-embed = ["asset_payload/nasa-embed"]
glsl-100 = ["raylib/opengl_es_20"]
#TODO: If you mess up the spaces in a feature list like `--features tests-only, opengl-11` vs. `--features tests-only,opengl-11` it wont target... wtf
opengl-11 = ["raylib/opengl_11"]
opengl-21 = ["raylib/opengl_21"]
opengl-es-20 = ["raylib/opengl_es_20"]
opengl-es-30 = ["raylib/opengl_es_30"]
opengl-33 = ["raylib/opengl_33"]


[target.'cfg(not(any(target_arch = "wasm32", target_os = "linux")))'.dependencies]
aubio-rs = "0.2.0"
lewton = "0.10.2"


[build-dependencies]
cc = "=1.0"
