[package]
name = "bath"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
asset_payload = { path = "asset_payload", default-features = false }
hound = "3.4.0"
rustysynth = "1.3.5"
midly = "0.5.3"
godot = { version = "0.3.1", features = ["experimental-wasm"], optional = true }
heapless = { version = "0.8.0", optional = true }
midir = { version = "0.10.1", optional = true }
rdev = { version = "0.5.3", optional = true }
terminal_size = { version = "0.4.2", optional = true }
fftw2-sys = { git = "https://github.com/meisei4/fftw2-rs.git", branch = "main" }
once_cell = "1.21.3"

raylib = { path = "/Users/adduser/raylib-rs/raylib", features = ["SUPPORT_FILEFORMAT_JPG"], optional = true }
image = { version = "0.25", optional = true }
gltf = "1.4.1"
meshopt = "0.3"
ttf-parser = "0.25.1"

[features]
default = ["std", "godot"]
std = []
tests-only = ["midir", "rdev", "terminal_size", "raylib", "image"]
nasa-embed = ["asset_payload/nasa-embed"]
glsl-100 = ["raylib/opengl_es_20"]
opengl-11 = ["raylib/opengl_11"]
opengl-21 = ["raylib/opengl_21"]
opengl-es-20 = ["raylib/opengl_es_20"]
opengl-es-30 = ["raylib/opengl_es_30"]
opengl-33 = ["raylib/opengl_33"]
# aubio feature - only works on Linux due to bindgen issues on macOS
aubio = ["dep:aubio-rs", "dep:lewton"]

[target.'cfg(target_os = "linux")'.dependencies]
aubio-rs = { version = "0.2.0", optional = true }
lewton = { version = "0.10.2", optional = true }

[build-dependencies]
cc = "=1.0"
